Add dynamic shopping list
